# canon-intervalometer

./: .gitignore  .gitmodules  Makefile  build.zig  compile_flags.txt  run-canon.sh  run.sh
canon-sdk/: ReleaseNote.txt
canon-sdk/EDSDK/Framework/EDSDK.framework/Resources/: Info.plist
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/: EDSDK
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/CHHLLite.bundle/Contents/: Info.plist
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/CHHLLite.bundle/Contents/MacOS/: CHHLLite
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/CHHLLite.bundle/Contents/Resources/: CHHLLite_macOS_Info.plist
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/EdsImage.bundle/Contents/: Info.plist
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/EdsImage.bundle/Contents/MacOS/: EdsImage
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/Resources/: Info.plist
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/A/_CodeSignature/: CodeResources
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/Current/CHHLLite.bundle/Contents/MacOS/: CHHLLite
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/Current/CHHLLite.bundle/Contents/_CodeSignature/: CodeResources
canon-sdk/EDSDK/Framework/EDSDK.framework/Versions/Current/_CodeSignature/: CodeResources
canon-sdk/EDSDK/Header/: EDSDK.h  EDSDKErrors.h  EDSDKTypes.h
canon-sdk/sample/C++/MultiCamCui/: CMakeLists.txt  readme.md
canon-sdk/sample/C++/MultiCamCui/include/: CameraEvent.h  CameraModel.h  Download.h  PreSetting.h  Property.h  utility.h
canon-sdk/sample/C++/MultiCamCui/src/: CameraEvent.cpp  CameraModel.cpp  Download.cpp  MultiCamCui.cpp  PreSetting.cpp  utility.cpp
src/: camera.c  camera.h  camera.zig  command.h  command.zig  edsdk.zig  html.zig  http.c  http.h  http.zig  main-mongoose.c  main.c  main.zig  queue.c  queue.h  queue.zig  timer.c  timer.h
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx
web-ui/: index.css  index.js  package-lock.json  package.json
web-ui/src/: App.jsx  main.jsx
web-ui/src/styles/: App.css
